# MrText-2

./: CMakeLists.txt  CMakePresets.json  gdb.txt
include/MrText/: #BTree.hpp#  #Node.hpp#  .#BTree.hpp  .#Node.hpp  ArrayBuffer.hpp  BTree.hpp  Event.hpp  KeyMap.hpp  MrText.hpp  Node.hpp  Rope.hpp  RopeConstants.hpp  TextInfo.hpp
main/: CMakeLists.txt  main.cpp
src/: ArrayBuffer.cpp  BTree.cpp  CMakeLists.txt  Event.cpp  KeyMap.cpp  MrText.cpp  Node.cpp  Rope.cpp  TextInfo.cpp  backup-mrtext
tests/: CMakeLists.txt  TestBuffers.hpp  testlib.cpp
